--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,45 @@
-pyrogram==2.0.106
-pyrofork==2.2.11
-tgcrypto
-pymongo[srv]
-motor
-marshmallow
-umongo
-requests
-bs4
-imdbpy
-heroku3
-pynewtonmath
-pytz
-aiohttp
+pyrofork==2.3.45 
+tgcrypto  
+requests  
+bs4  
+shortzy  
+datetime  
+pytz  
+aiohttp 
+yt-dlp 
+youtube-dl 
+requests 
+ytthumb 
+jinja2 
+apscheduler 
+pyshorteners 
+colorama 
+NumPy  
+wheel  
+ujson  
+wget  
+pytz 
+aiofiles 
+hachoir 
+python-decouple  
+ffmpeg 
+youtube_search 
+pymongo[srv]==3.12.3  
+motor==2.5.1  
+marshmallow==3.14.1  
+umongo==3.0.1  
+PyLeaves==1.0.2 
+youtube-search-python==1.4.6 
+opencv-python-headless==4.7.0.68  
+googletrans==3.1.0a0  
+telegraph==2.2.0  
+python-dotenv==0.21.1  
+gTTS==2.3.1  
+speedtest==0.0.1  
+humanize==4.6.0  
+Pillow==9.4.0  
+psutil==5.9.4  
+dnspython==2.3.0 
+ffmpeg-python>=0.2.0 
+openai==0.25.0 
+git+https://github.com/Joelkb/cinemagoer
